--- a/.github/workflows/ci-cleanup.yml
+++ b/.github/workflows/ci-cleanup.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   hatchet-app-cleaner:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       HATCHET_APP_PREFIX: "htcht-"
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
